fixed extra space after footer

--- a/src/component/Information/InformationStyle.css
+++ b/src/component/Information/InformationStyle.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 50px;
+  /* height: 50px; */
   align-items: center;
   padding-bottom: 0;
 }
